--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,5 +4,10 @@ services:
     image: hapka-website
     build: .
     ports:
-      - "443:80"
+      - "80:80"
+      - "443:443"
     container_name: nginx
+    volumes:
+      - ./html:/usr/share/nginx/html
+      - ./nginx.conf:/etc/nginx/conf.d/default.conf
+      - ./ssl:/etc/nginx/ssl
